# bdacore

./: .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  DEVGUIDE.md  LICENSE  MANIFEST.in  Makefile  README.md  setup.cfg  setup.py
bdacore/: __main__.py  api.py  cli.py
bdacore/db/: merge.py
bdacore/metrics/: metrics.py
bdacore/neural_networks/keras_factory/: __init__.py  abstract_model_generator.py  autoencoders.py  text_models.py
bdacore/neural_networks/processing/: text_classification.py  workflow.py
bdacore/outliers/: outliers.py
bdacore/preprocessing/: __init__.py  fillna.py  shifter.py
bdacore/preprocessing/feature_extraction/: __init__.py  categorical.py  distribution.py  text.py  ts.py
bdacore/preprocessing/ts/: __init__.py  (+1 more)
bdacore/text/: __init__.py  lsh.py  utils.py
bdacore/timeseries/: __init__.py  histrogramdata.py  seqminer.py
bdacore/utils/: calibration.py  feature_contributions.py  prediction_interval.py
bdacore/visualization/: metrics.py  prediction_interval_visualization.py
ci/: Dockerfile  Jenkinsfile  test_requirements.txt
docs/: Makefile  conf.py  index.rst  installation.rst  tutorial.rst  usage.rst
tests/acceptance/: test_functional_notebooks.py
tests/db/: test_merge.py
tests/metrics/: test_metrics.py
tests/outliers/: test_outliers.py  test_utils.py
tests/preprocessing/: test_fillna.py  test_shifter.py
tests/text/: test_lsh.py  test_utils.py
tests/timeseries/: test_histogramdata.py  test_seqminer.py
tests/utils/: test_calibration.py  test_feature_contributions.py  test_prediction_interval.py
(+22 files in other folders)
