[metadata]
author = BDA TEAM
author_email = datadriver@octo.com
url = https://gitlab.octo.com/dd/bdacore
license = BSD 3-Clause License
description = A library gathering BDA team core algorithms

classifiers =
    Programming Language : : Python :: 2.7
    Programming Language : : Python :: 3.6

[aliases]
test = pytest

[options]
packages = find:
zip_safe = False
include_package_data = True

install_requires =
    matplotlib<3.0
    pandas>=0.23.4
    scikit-learn==0.19.*
    scikit-learn[alldeps]==0.19.*
    scipy
    xxhash
    unidecode
    gensim
    future
    backports.functools_lru_cache

[options.package_data]
* = *.csv, *.ipynb

[zest.releaser]
no-input = yes
release = no
create-wheel = yes

[bdist_wheel]
universal = 1

[build-system]
requires = setuptools; wheel>=0.31.*

[tool:pytest]
python_files = *tests/*.py
markers =
    functional: run tutorial notebooks to validate API usages
    integration: run integration

junit_suite_name = reports/coverage.xml
filterwarnings =
    ignore::Warning
addopts =
    --cov=bdacore
    --cov-append
    --cov-report html:reports
    --cov-report xml:reports/coverage.xml
    --doctest-modules
    --junitxml=reports/xunit_reports.xml
    -k "not integration and not functional"